--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ SET( PROJ_OUT_PATH ${CMAKE_BINARY_DIR} )
 
 
 # Section for project specific settings
-SET( PROJ_NAME "server" )
+SET( SERVER_PROJ_NAME "server" )
+SET( CLIENT_PROJ_NAME "client" )
 
 #SET( OPENSSL_INCLUDES "C:/Program Files (x86)/GnuWin32/include" )
 #SET( OPENSSL_LIBRARIES "C:/Program Files (x86)/GnuWin32/lib/ssleay32.lib" "C:/Program Files (x86)/GnuWin32/lib/libeay32.lib" )
@@ -16,7 +17,8 @@ SET( BOOST_LIBRARIES ${OPENSSL_LIBRARIES} "C:/boost_1_57_0/lib/libboost_system-m
 SET( PROJ_LIBRARIES ${BOOST_LIBRARIES} "ws2_32" "wsock32" )
 SET( PROJ_INCLUDES ${BOOST_INCLUDES} "src" "lib" )
 FILE( GLOB_RECURSE PROJ_HEADERS )
-FILE( GLOB_RECURSE PROJ_SOURCES server.cpp )
+FILE( GLOB_RECURSE SERVER_PROJ_SOURCES server.cpp )
+FILE( GLOB_RECURSE CLIENT_PROJ_SOURCES client.cpp )
 
 # End of special section
 
@@ -29,7 +31,12 @@ ENDIF ( UNIX )
 
 
 
-PROJECT( ${PROJ_NAME} )
+PROJECT( ${SERVER_PROJ_NAME} )
 INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
-ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} )
-TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
+ADD_EXECUTABLE( ${SERVER_PROJ_NAME} ${SERVER_PROJ_SOURCES} )
+TARGET_LINK_LIBRARIES( ${SERVER_PROJ_NAME} ${PROJ_LIBRARIES} )
+
+PROJECT( ${CLIENT_PROJ_NAME} )
+INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
+ADD_EXECUTABLE( ${CLIENT_PROJ_NAME} ${CLIENT_PROJ_SOURCES} )
+TARGET_LINK_LIBRARIES( ${CLIENT_PROJ_NAME} ${PROJ_LIBRARIES} )
